--- a/test/content.html
+++ b/test/content.html
@@ -1,3 +1,3 @@
 <p>Hello world </p>
 <div id="subContainer"></div>
-<p><a href="#!subContainer=subcontainer.html">Fill SubContainer! </a></p>
+<p xmlns="http://www.w3.org/1999/xhtml"><a href="#!subContainer=subcontainer.html">Fill SubContainer! </a></p>
