Added hux_wrap and hashmgr4indexing.hux.js

--- a/test/test.html
+++ b/test/test.html
@@ -15,5 +15,6 @@
 		<p>No URL Update : <a href="content.html" hux:targetnode="container2">Click</a></p>
 		<p>Update URL : <a href="#!container=content.html" >Click</a></p>
 		<p>Replace container2 content : <a href="#!container2=content.html">URL update</a></p>
+		<p>data-hux-hash : <a href="content.html" data-hux-href="#!container=content.html">click here</a></p>
 	</body>
 </html>
