renamed *targetnode to *target; resolved ambiguities between "nodes" and "elements"; added "loading" event

--- a/test/test.html
+++ b/test/test.html
@@ -8,6 +8,15 @@
 		<meta charset="utf-8"/>
 		<title>TEST</title>
 		<script type="text/javascript" src="../hux.js"></script>
+		<style type="text/css">
+			#container2.hux_beforeInject {
+				-moz-transform:scale(0);
+			}
+			#container2.hux_loaded {
+				-moz-transform:scale(1);
+				-moz-transition-duration:3s;
+			}
+		</style>
 	</head>
 	<body>
 		<div id="container"></div>
