--- a/test/test.xhtml
+++ b/test/test.xhtml
@@ -12,7 +12,7 @@
 	<body>
 		<div id="container"></div>
 		<div id="container2">Default content for Container 2</div>
-		<p>No URL Update : <a href="content.html" hux:targetnode="container2">Click</a></p>
+		<p>No URL Update : <a href="content.html" hux:target="container2">Click</a></p>
 		<p>Update URL : <a href="#!container=content.html" >Click</a></p>
 		<p>Replace container2 content : <a href="#!container2=content.html">URL update</a></p>
 	</body>
