--- a/test/testComment.xhtml
+++ b/test/testComment.xhtml
@@ -26,7 +26,7 @@
 							<td class="comment">This Article is useless! <br/> I lost 5 minutes to read this useless Article!</td>
 						</tr>
 				</table>
-				<form action="CGI/comment.php" method="POST" data-hux-targetnode="comments" id="form">
+				<form action="CGI/comment.php" method="POST" data-hux-target="comments" id="form">
 					<p>login :<br/><input type="text" name="login" /></p>
 					<p>Comment : <br/><textarea name="comment" id="comment_content" ></textarea></p>
 					<p><input type="submit" /></p>
