--- a/test/test.html
+++ b/test/test.html
@@ -11,10 +11,19 @@
 		<style type="text/css">
 			#container2.hux_beforeInject {
 				-moz-transform:scale(0);
+				-webkit-transform:scale(0);
+				-o-transform:scale(0);
+				transform:scale(0);
 			}
 			#container2.hux_loaded {
 				-moz-transform:scale(1);
+				-webkit-transform:scale(1);
+				-o-transform:scale(1);
+				transform:scale(1);
 				-moz-transition-duration:3s;
+				-webkit-transition-duration:3s;
+				-o-transition-duration:3s;
+				transition-duration:3s;
 			}
 		</style>
 	</head>
