corrected Selector.evaluate context and udpated unit tests

--- a/test/test.html
+++ b/test/test.html
@@ -9,7 +9,7 @@
 		<title>TEST</title>
 		<script type="text/javascript" src="../hux.js"></script>
 		<style type="text/css">
-			#container2.hux_beforeInject {
+			#container2.hux_initLoaded {
 				-moz-transform:scale(0);
 				-webkit-transform:scale(0);
 				-o-transform:scale(0);
