--- a/test/unitTests.html
+++ b/test/unitTests.html
@@ -102,6 +102,28 @@
 							equal(container.children.length, 1);
 							equal(container.children[0].className, "content1");
 						});
+					},
+					function(container){
+						test("second injection", function(){
+							equal(location.hash, $id("interfaceHM").getElementsByTagName("a")[1].getAttribute("href"));
+							equal(container.children.length, 1);
+							equal(container.children[0].className, "content4");
+							// move the loaded anchor element to #interfaceHM, to let the runner simulate click on it
+							var a = container.getElementsByTagName("a")[0];
+							document.getElementById("interfaceHM").appendChild( a );
+						});
+					},
+					function(container){
+						test("injection in sub-container", function(){
+							var expected_hash, anchors;
+							anchors = $id("interfaceHM").getElementsByTagName("a");
+							expected_hash = anchors[1].getAttribute("href")+ anchors[2].getAttribute("href").replace(/^#/, ",");
+							equal(location.hash, expected_hash);
+							equal(container.children.length, 1);
+							equal(container.children[0].className, "content4");
+							// check the subcontainer
+							ok($id("subcontent4").innerHTML==="loaded", "the sub-container is loaded");
+						});
 					}
 				]
 			};
@@ -173,7 +195,8 @@
 		<table id="containerForm" style="display:none">
 			
 		</table>
-		<div id="containerHM"></div>
+		<div id="containerHM" style="display:none">
+		</div>
 		<div id="interfaceSL" style="display:none">
 			<a href='contents/content1.html' data-hux-target='containerSimpleLoader'>click</a>
 			<a href='contents/content2.html' data-target='containerSimpleLoader' data-hux-filling="prepend">click</a>
@@ -188,8 +211,9 @@
 				<input type="submit" name="submit"/>
 			</form>
 		</div>
-		<div id="interfaceHM">
+		<div id="interfaceHM" style="display:none">
 			<a href='#!containerHM=contents/content1.html'>click</a>
+			<a href="#!containerHM=contents/content4.html">click</a>
 		</div>
 	</body>
 </html>
