namespace replaced. "http://example.org/HUX"=>"urn:hux:1.0"

--- a/test/testComment.html
+++ b/test/testComment.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
  <html
   xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:hux="http://www.example.org/HUX">
+  xmlns:hux="urn:hux:1.0">
 	<head>
 		<title>Example of comments post system</title>
 		<script TYPE="text/javascript" src="../hux.js"></script>
