--- a/test/test.html
+++ b/test/test.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html
   xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:hux="http://www.example.org/HUX">
+  xmlns:hux="urn:hux:1.0">
   <!--NOTE : doit etre d'extension .xhtml sauf pour IE -->
 	<head>
 		<meta charset="utf-8"/>
