--- a/test/test.html
+++ b/test/test.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html
   xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:hux="urn:hux:1.0">
+  xmlns:hux="http://www.example.org/HUX">
   <!--NOTE : doit etre d'extension .xhtml sauf pour IE -->
 	<head>
 		<meta charset="utf-8"/>
@@ -30,7 +30,7 @@
 	<body>
 		<div id="container"></div>
 		<div id="container2">Default content for Container 2</div>
-		<p>No URL Update : <a href="content.html" hux:targetnode="container2">Click</a></p>
+		<p>No URL Update : <a href="content.html" hux:target="container2">Click</a></p>
 		<p>Update URL : <a href="#!container=content.html" >Click</a></p>
 		<p>Replace container2 content : <a href="#!container2=content.html">URL update</a></p>
 		<p>data-hux-hash : <a href="content.html" data-hux-href="#!container=content.html">click here</a></p>
