--- a/test/unitTests.html
+++ b/test/unitTests.html
@@ -218,7 +218,7 @@
 		<ol id="qunit-tests"></ol>
 		<div id="qunit-fixture">test markup, will be hidden</div>
 		<br/><br/><br/>
-		<div id="containerSimpleLoader" style="display:none"></div>
+		<div id="containerSimpleLoader" style=""></div>
 		<table id="containerForm" style="display:none">
 			
 		</table>
