--- a/test/test.xhtml
+++ b/test/test.xhtml
@@ -8,6 +8,10 @@
 		<meta charset="utf-8"/>
 		<title>TEST</title>
 		<script type="text/javascript" src="../hux.js"></script>
+		<script>
+			/* uncomment this to enable XHTML Support :  */
+			//HUX.XHTMLSupport.enabled = true;
+		</script>
 		<style type="text/css">
 			#container2.hux_initLoaded {
 				-moz-transform:scale(0);
