add new feature doc + removed jukebow demo

--- a/contents/demos/gallery.html
+++ b/contents/demos/gallery.html
@@ -9,7 +9,7 @@
 		margin-right:10px;
 	}
 </style>
-<p id="carousel"><a href="@-iview" data-hux-default><img src="dij_indian_mini" /></a><a href="@+iview=contents/demos/images/village.html" data-hux-default><img src="dij_village_mini" /></a><a href="@+iview=contents/demos/images/snow.html"><img src="dij_snow_mini" /></a><a href="@+iview=contents/demos/images/night_traffic.html" data-hux-default><img src="dij_night_traffic_mini" /></a><a href="@+iview=contents/demos/images/shining_egg.html" data-hux-default><img src="dij_shining_egg_mini" /></a></p>
+<p id="carousel"><a href="@-iview" data-hux-default><img src="contents/demos/images/indian_mini.jpg" /></a><a href="@+iview=contents/demos/images/village.html" data-hux-default><img src="contents/demos/images/village_mini.jpg" /></a><a href="@+iview=contents/demos/images/snow.html"><img src="contents/demos/images/snow_mini.jpg" /></a><a href="@+iview=contents/demos/images/night_traffic.html" data-hux-default><img src="contents/demos/images/night_traffic_mini.jpg" /></a><a href="@+iview=contents/demos/images/shining_egg.html" data-hux-default><img src="contents/demos/images/shining_egg_mini.jpg" /></a></p>
 <div id="iview" class="hux_transition" style="min-height:750px;">
 <h1>HUX Logo</h1>
 <img src="contents/demos/images/indian.jpg" class="photo"/>
