--- a/contents/demos/slideshow.html
+++ b/contents/demos/slideshow.html
@@ -6,8 +6,11 @@
 		min-height:300px;
 	}
 </style>
-
+<p class="warning">Demo under construction. Comes back soon</p>
+<!--
 <div id="slide" class="hux_transition photos">
+	
+
 	<div data-slide="0">
 		<h1>HUX</h1>
 		<h2>What will be shown in these slides</h2>
@@ -19,4 +22,4 @@
 		</ol>
 		<p>!! Use the left and the right arrows of your keyboard to navigate !!</p>
 	</div>
-</div>
+</div>-->
