--- a/contents/features.html
+++ b/contents/features.html
@@ -19,13 +19,27 @@
 					<a href="@+feature=contents/features/atinclusion.html">At Inclusion</a>
 				</li>
 				<li>
-					<a href="@+feature=contents/features/hashmgr.html">Hash Manager</a>
+					<ul class="menu submenu body_menu">
+						<li>
+							<a href="@+feature=contents/features/hashbang.html">Presentation</a>
+						</li>
+						<li>
+							<a href="@+feature=contents/features/hashbang_howto.html">How To use it</a>
+						</li>
+					</ul>
+					<a href="@+feature=contents/features/hashbang.html">Hash Bang</a>
 				</li>
 				<li>
 					<a href="@+feature=contents/features/atinclusionfb.html">At Inclusion Fallback</a>
 				</li>
 				<li>
-					<a href="@+feature=contents/features/target.html">Simple Load</a>
+					<a href="@+feature=contents/features/simpleload.html">Simple Load</a>
+				</li>
+				<li>
+					<a href="@+feature=contents/features/form.html">Form</a>
+				</li>
+				<li>
+					<a href="@+feature=contents/features/scriptinjecter.html">Script Injecter</a>
 				</li>
 			</ul>
 		</td>
@@ -33,14 +47,13 @@
 		<div>
 			<div id="feature" class="hux_transition">
 				<h1>HUX Modules</h1>
-				<p>HUX is sort of a <i>customable pack</i> of modules.</p>
-				<p>It is composed of : </p>
+				<p>HUX is sort of a <i>customable pack</i>. Indeed, it is composed of : </p>
 				<ul>
 					<li>A core, that each module will use as a framework</li>
 					<li>Modules, that you can add or remove, depending on your needs</li>
 				</ul>
 				<p>If you want the whole pack of HUX, you can just download it from <a href="https://github.com/fflorent/HUX/blob/master/hux.js">github</a>.</p>
-				
+				<p>Otherwise, you can just download HUX, and use the makefile (on *NIX machines only, sorry)</p>
 			</div>
 		</div>
 		</td>
