--- a/contents/demo.html
+++ b/contents/demo.html
@@ -5,17 +5,15 @@
 			<ul>
 				<li><a href="@+demo=contents/demos/gallery.html">Gallery</a></li>
 				<li><a href="@+demo=contents/demos/slideshow.html">SlideShow</a></li>
-				<li><a href="@+demo=contents/demos/music.html">Jukebox</a></li>
 				<li><a href="@+demo=contents/demos/about.html">About</a></li>
 			</ul>
 		</td>
 		<td class="content demo_content">
 			<div id="demo" class="hux_transition">
-				<p>The demos presented here use HUX and are intended to demonstrate its potential, a framework to Ajaxise a website.</p>
+				<p>The demos presented here use HUX and are intended to demonstrate its potential, a framework to "Ajaxise" a website.</p>
 				<p>Demos are accessible via the left menu.</p>
-				<p>Since HUX is still in an experimental state, you can encounter some bugs. Note that these demos have been tested mostly on Mozilla Firefox 6.</p>
-				<p>If you are interested in HUX and you are a Javascript developer, you are welcome for helping me to develop it.</p>
-				<p>Thank you,<br/>Florent</p>
+				<p>Since HUX is still in an experimental state, you can encounter some bugs. Note that these demos have been tested mostly on Mozilla Firefox (latest versions), but also Chrome, Opera and Internet Explorer (versions 7/8/9).</p>
+				<p>If you encounter bugs, please, report them through github. Thank you in advance.</p>
 			</div>
 		</td>
 	</tr>
