--- a/contents/demos/about.html
+++ b/contents/demos/about.html
@@ -7,7 +7,6 @@
 	<h2>Thanks to</h2>
 	<ul>
 		<li>Florian Chaurreau for his advices concerning the design</li>
-		<li>Damien Mosteiro and Iswaran Virapinmodely for allowing me to show their awesome photos in the <a href="@container=contents/demo.html,demo=contents/demos/gallery.html">gallery demo</a></li>
-		<li>Azereus, an anonymous person who share freely brilliant music albums</li>
+		<li>Damien Mosteiro and Iswaran Virapinmodely for allowing me to use their awesome photos in the <a href="@container=contents/demo.html,demo=contents/demos/gallery.html">gallery demo</a></li>
 	</ul>
 </div>
