--- a/contents/features/atinclusion.html
+++ b/contents/features/atinclusion.html
@@ -2,12 +2,14 @@
 <p class="warning">Warning : At Inclusion requires Firefox 4+, Chrome 5+, Opera 11.50+, and Safari5+
 		<br/>To support other browsers/versions, you are recommended to use <a href="@+feature=contents/features/atinclusionfb.html">At Inclusion Fallback</a></p>
 <p class="warning">This module is still experimental. See <a href="#known_bugs">known bugs</a></p>
-<p>At Inclusion is a module for HUX that manages history and updates URL as the user loads contents.</p>
+<p>At Inclusion is a module for HUX that manages history and updates URL as the user loads remote contents.</p>
 <p>By updating URL, At Inclusion ensures that the loaded contents are retrieved when the page is refreshed, or if the URL is shared with someone else.</p>
 <p>By managing history, At Inclusion lets the user click on "Back"/"Next" button of their browser to navigate through the history.</p>
-<h2><a name="differences_with_hash_bang"></a>Differences with Hash Bang</h2>
+<h2>How to use it ?</h2>
+<p>See <a href="@+feature=contents/features/atinclusion_howto.html">At Inclusion : How to use it?</a></p>
+<h2 id="differences_with_hash_bang">Differences with Hash Bang</h2>
 <p>At Inclusion uses the <a href="https://developer.mozilla.org/en/DOM/Manipulating_the_browser_history#Adding_and_modifying_history_entries" target="_blank">last history API (pushstate, replacestate)</a> available for Chrome 5+, Firefox 4+, Internet Explorer 10+, Opera 11.5+ and Safari 5.0+</p>
-<p>For the older browsers, you are proposed to use <a href="@+feature=contents/features/hashmgr.html">Hash Bang</a> coupled with <a href="@+feature=contents/features/atinclusionfb.html">AtInclusions fallback</a></p>
+<p>For the older browsers, you are proposed to use <a href="@+feature=contents/features/hashbang.html">Hash Bang</a> coupled with <a href="@+feature=contents/features/atinclusionfb.html">AtInclusions fallback</a></p>
 <p>This table compares the advantages of At Inclusion and Hash Bang : </p>
 <table class="summary" style="text-align:left">
 	<tbody>
@@ -38,30 +40,15 @@
 		</tr>
 	</tbody>
 </table>
-<p><sub>1 : needs <a href="@+feature=contents/features/atinclusionfb.html">At Inclusion Fallback</a> and <a href="@+feature=contents/features/hashmgr.html">Hash Bang</a></sub><br/>
+<p><sub>1 : needs <a href="@+feature=contents/features/atinclusionfb.html">At Inclusion Fallback</a> and <a href="@+feature=contents/features/hashbang.html">Hash Bang</a></sub><br/>
    <sub>2 : still experimental</sub></p>
 <br/>
 <p>If you need to <i>Ajaxise</i> your website, but you also want to index it, you are highly recommended to use At Inclusion with <a href="@+feature=contents/features/atinclusionfb.html">At Inclusion Fallback</a> for older browsers.</p>
-<p>If you use your website for a specific browser, for example in an intranet, you can consider using either At Inclusion or <a href="@+feature=contents/features/hashmgr.html">Hash Bang</a>, depending on the compatibilities.</p>
-<!--<h2>Example of use</h2>
-
-<h3>Example 1</h3>
-<h4>Code :</h4>
-<div class="code">
-	<code>
-		&lt;a href="@+ex_um_target1=resources/hello_world.html"&gt;click to run Example 1&lt;/a&gt;<br/>
-		&lt;div id="ex_um_target1"&gt;I will disapear...&lt;/div&gt;
-	</code>
-</div>
-<h4>Rendering :</h4>
-<div class="rendering">
-	<a href="@+ex_um_target1=resources/example_atinclusion.html">click to run Example 1</a>
-	<div id="ex_um_target1">I will disapear...</div>
-</div>-->
+<p>If you use your website for a specific browser, for example in an intranet, you can consider using either At Inclusion or <a href="@+feature=contents/features/hashbang.html">Hash Bang</a>, depending on the compatibilities.</p>
 
 <h2><a name="known_bugs"></a>Known Bugs</h2>
 <p>We can consider the fact that letting the user load contents in any target as a security issue, even though that contents are provided by HTML pages hosted in the same server.</p>
-<p>Until a solution is provided, you are recommended not to use <a href="@+feature=contents/features/hashmgr.html">Hash Bang</a> nor <a href="@+feature=contents/features/atinclusion.html">At Inclusion</a> except for test purposes 
+<p>Until a solution is provided, you are recommended not to use <a href="@+feature=contents/features/hashbang.html">Hash Bang</a> nor <a href="@+feature=contents/features/atinclusion.html">At Inclusion</a> except for test purposes 
 	and with pages hosted by a test server.</p>
 <h2>Features in project</h2>
 <ul>
